# AI-Resume-Generator

./: .gitignore  README.md  config.py  fill_resume.py  llm.py  main.py  plan  pyproject.toml  resume_document.py  resume_pipeline.py  scraper.py
.texmf/tex/latex/local/: fullpage.sty
.texmf/tlpkg/: texlive.tlpdb
.texmf/tlpkg/tlpobj/: enumitem.tlpobj  marvosym.tlpobj  titlesec.tlpobj
.texmf/web2c/: updmap.cfg
assets/data/: resume_example.json  resume_structure.json
assets/prompts/: compress_resume_to_one_page.txt  create_cover_letter_from_job_spec.txt  extract_job_spec.txt  optimize_resume_from_job_spec.txt
assets/schema/: cover_letter_schema.json  resume_schema.json
assets/templates/: cover_letter_template.tex  resume.tex
pipeline/: base_pipeline.py  cover_letter_pipeline.py  job_spec_pipeline.py  resume_pipeline.py
schema/: __init__.py  cover_letter.py  job_spec.py  resume.py
util/: fill_cover_letter.py  fill_latex.py  fill_resume.py
