[project]
name = "resume-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=6.14.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "logger>=1.4",
    "numpy>=2.4.4",
    "pdflatex>=0.1.3",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
]
